# AgentDOOM

./: Pipfile  README.md  __init__.py  common_utils.py  pyproject.toml  requirements.txt  train.py
agents/: ppo_agent.py  vit_ppo_agent.py
envs/: make_env.py
evaluation/: cnn_encoder.py
logs/: ppo_cnn.csv  ppo_cnn_breakout.csv  ppo_cnn_breakout_1mi_iterations.csv  ppo_cnn_breakout_2mi_iterations.csv  ppo_cnn_pong_500k_iterations.csv  ppo_vit.csv  ppo_vit_pong_500k_iterations.csv
logs/lr_1e-6_clip_02/: ppo_cnn_breakout_1mi_iterations.csv  ppo_cnn_breakout_2mi_iterations.csv  ppo_cnn_breakout_500k_iterations.csv  ppo_cnn_pong_1mi_iterations.csv  ppo_cnn_pong_2mi_iterations.csv  ppo_cnn_pong_500k_iterations.csv
logs/ppo_cnn/breakout/lr_1e-4_clip_01/1mi/: ppo_cnn.csv
logs/ppo_cnn/breakout/lr_1e-4_clip_01/2mi/: ppo_cnn.csv
logs/ppo_cnn/breakout/lr_1e-4_clip_01/500k/: ppo_cnn.csv
logs/ppo_cnn/breakout/lr_1e-4_clip_02/1mi/: ppo_cnn.csv
logs/ppo_cnn/breakout/lr_1e-4_clip_02/2mi/: ppo_cnn.csv
logs/ppo_cnn/breakout/lr_1e-4_clip_02/500k/: ppo_cnn.csv
logs/ppo_cnn/breakout/lr_1e-5_clip_01/1mi/: ppo_cnn.csv
logs/ppo_cnn/breakout/lr_1e-5_clip_01/2mi/: ppo_cnn.csv
logs/ppo_cnn/breakout/lr_1e-5_clip_01/500k/: ppo_cnn.csv
logs/ppo_cnn/breakout/lr_1e-5_clip_02/1mi/: ppo_cnn.csv
logs/ppo_cnn/breakout/lr_1e-5_clip_02/2mi/: ppo_cnn.csv
models/: actor_critic.py  cnn.py  vit_encoder.py
notebooks/: analysis.ipynb  plot_rewards.ipynb  ppo-cnn.ipynb  ppo-encoder.ipynb  ppo-vit.ipynb
training/: __init__.py  ppo_cnn.py  ppo_vit.py  raw.py
(+25 files in other folders)
