[project]
name = "agentdoom"
version = "0.1.0"
description = ""
authors = [
    {name = "vdella",email = "vitor.origamer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "gymnasium (>=1.1.1,<2.0.0)",
    "ale-py (>=0.10.2,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
